--- a/clock/style.css
+++ b/clock/style.css
@@ -276,3 +276,19 @@ body {
         margin-top: -55px;
     }
 }
+
+/**
+ * copyright
+ */
+
+.frame_foot_copyright {
+    display: flex;
+    position: fixed;
+    bottom: 30px;
+    width: 100%;
+    line-height: 27px;
+    display: block;
+    text-align: center;
+    color: rgba(255, 255, 255, 0.2);
+    font-size: 15px;
+}
