--- a/clock/chinese/style.css
+++ b/clock/chinese/style.css
@@ -21,39 +21,41 @@ body {
     /* font-family: "微软雅黑", serif; */
 }
 
-.exitFullScreen {
-    float: right; 
-    width: 50px; 
-    height: 22px;
-    margin-top: 45px;
-    margin-right: 8px;
-    font-size: 16px;
+.action {
+    display: block;
+    position: fixed;
+    top: 40px;
+    right: 40px;
+    width: 20px;
+    height: auto;
+    padding-top: 1px;
+    text-align: center;
     color: rgba(255, 255, 255, 0.2);
-    cursor: pointer;
-    /* background-color: brown; */
+    /* border: 1px solid red; */
+    z-index: 1000;
 }
 
-.styleSwitch {
-    float: right; 
-    width: 50px; 
-    height: 22px;
-    margin-top: 100px;
-    margin-right: -49px;
-    font-size: 16px;
-    color: rgba(255, 255, 255, 0.2);
+.action .exitFullScreen {
+    display: block;
+    width: 20px; 
+    height: 20px;
     cursor: pointer;
-    /* background-color: brown; */
 }
 
-.dateSwitch {
-    float: right; 
-    width: 50px; 
-    height: 22px;
-    margin-top: 147px;
-    margin-right: -49px;
-    color: rgba(255, 255, 255, 0.2);
+.action .styleSwitch {
+    display: block;
+    margin-top: 35px;
+    width: 20px; 
+    height: 20px;
     cursor: pointer;
-    /* background-color: brown; */
+}
+
+.action .dateSwitch {
+    display: block;
+    margin-top: 35px;
+    width: 20px; 
+    height: 20px;
+    cursor: pointer;
 }
 
 audio {
