--- a/clock/style.css
+++ b/clock/style.css
@@ -11,56 +11,47 @@ body {
     background: black !important;
 }
 
-.fullScreen {
-    /* width: 50px; 
-    height: 50px;
-    color: white;
-    padding-left: 3px;
-    margin-top: -10px;
-    margin-left: -10px;
-    cursor: pointer;
-    z-index: 1000; */
-    
-    /* background-color: aqua; */
-
-    float: right; 
-    width: 50px; 
-    margin-top: 37px;
+.action {
+    display: block;
+    position: fixed;
+    top: 40px;
+    right: 40px;
+    width: 20px;
+    height: auto;
+    text-align: center;
     color: rgba(255, 255, 255, 0.2);
-    cursor: pointer;
+    /* border: 1px solid red; */
     z-index: 1000;
 }
 
-.exitFullScreen {
-    float: right; 
-    width: 50px; 
-    margin-top: 37px;
-    color: rgba(255, 255, 255, 0.2);
+.action .fullScreen {
+    display: block;
+    width: 20px; 
+    height: 20px;
     cursor: pointer;
-    z-index: 1000;
-    /* background-color: brown; */
 }
 
-.styleSwitch {
-    float: right; 
-    width: 50px; 
-    margin-top: 92px;
-    margin-right: -49px;
-    color: rgba(255, 255, 255, 0.2);
+.action .exitFullScreen {
+    display: block;
+    width: 20px; 
+    height: 20px;
     cursor: pointer;
-    z-index: 1000;
-    /* background-color: brown; */
 }
 
-.dateSwitch {
-    float: right; 
-    width: 50px; 
-    margin-top: 147px;
-    margin-right: -49px;
-    color: rgba(255, 255, 255, 0.2);
+.action .styleSwitch {
+    display: block;
+    margin-top: 35px;
+    width: 20px; 
+    height: 20px;
     cursor: pointer;
-    z-index: 1000;
-    /* background-color: brown; */
+}
+
+.action .dateSwitch {
+    display: block;
+    margin-top: 35px;
+    width: 20px; 
+    height: 20px;
+    cursor: pointer;
 }
 
 .clock {
