Update clock page style

--- a/clock/chinese/style.css
+++ b/clock/chinese/style.css
@@ -30,7 +30,7 @@ body {
     height: auto;
     padding-top: 1px;
     text-align: center;
-    color: rgba(255, 255, 255, 0.2);
+    color: rgba(255, 255, 255, 0.15);
     /* border: 1px solid red; */
     z-index: 1000;
 }
@@ -104,8 +104,8 @@ video {
     top: -10px;
     left: -138px;
     text-align: center;
-    z-index: 1000;
-    cursor: pointer;
+    /* z-index: 1000; */
+    /* cursor: pointer; */
 }
 
 .main-content .year span {
