--- a/clock/flip/style.css
+++ b/clock/flip/style.css
@@ -33,7 +33,7 @@ body {
     height: auto;
     padding-top: 3px;
     text-align: center;
-    color: rgba(255, 255, 255, 0.2);
+    color: rgba(255, 255, 255, 0.15);
     /* border: 1px solid red; */
     z-index: 1000;
 }
@@ -62,9 +62,9 @@ body {
 }
 
 .clock {
-    width: 100%;
-    zoom: 4;
-    cursor: pointer;
+    /* width: 100%; */
+    /* zoom: 4; */
+    /* cursor: pointer; */
 }
 
 .flip-clock-dot {
@@ -123,7 +123,7 @@ h1 {
 }
 
 .flip-clock-wrapper a {
-    cursor: pointer;
+    /* cursor: pointer; */
     text-decoration: none;
     color: #aaa;
 }
